-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 18
-
Component/s: hotspot
-
b25
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8277557 | 17.0.3-oracle | Harold Seigel | P4 | Resolved | Fixed | b01 |
| JDK-8279516 | 17.0.3 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
| JDK-8277559 | 11.0.15-oracle | Harold Seigel | P4 | Resolved | Fixed | b01 |
| JDK-8279517 | 11.0.15 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
vmTestbase/nsk/stress/strace/strace004.java
Here's a snippet from the log file:
#section:main
----------messages:(4/191)----------
command: main nsk.stress.strace.strace004
reason: User specified action: run main/othervm/native nsk.stress.strace.strace004
Mode: othervm [/othervm specified]
elapsed time (seconds): 28.11
----------configuration:(0/0)----------
----------System.out:(68/3164)----------
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000fffe012f3860, pid=1278958, tid=1279864
#
# JRE version: Java(TM) SE Runtime Environment (18.0+24) (fastdebug build 18-ea+24-1595)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-ea+24-1595, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0xe53860] InstanceKlass::jni_id_for(int)+0xc
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/a2dc162d-743b-4800-9e92-31f85abb45b1-S33676/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c789aae0-376a-479b-8159-4444c8488ebb/runs/b9f2e469-90b9-4d0e-8039-d8ce170ca1e9/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_stress/scratch/1/core.1278958)
#
# An error report file with more information is saved as:
# /opt/mach5/mesos/work_dir/slaves/a2dc162d-743b-4800-9e92-31f85abb45b1-S33676/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c789aae0-376a-479b-8159-4444c8488ebb/runs/b9f2e469-90b9-4d0e-8039-d8ce170ca1e9/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_stress/scratch/1/hs_err_pid1278958.log
[thread 1279812 also had an error]
[thread 1279823 also had an error]
[thread 1279857 also had an error]
[thread 1279781 also had an error]
[thread 1279790 also had an error]
[thread 1279809 also had an error]
[thread 1279801 also had an error]
[thread 1279788 also had an error]
[thread 1279853 also had an error]
[thread 1279804 also had an error]
[thread 1279813 also had an error]
[thread 1279847 also had an error]
[thread 1279810 also had an error]
[thread 1279776 also had an error]
[thread 1279854 also had an error]
[thread 1279815 also had an error]
[thread 1279768 also had an error]
[thread 1279844 also had an error]
[thread 1279814 also had an error]
[thread 1279817 also had an error]
[thread 1279789 also had an error]
[thread 1279845 also had an error]
[thread 1279805 also had an error]
[thread 1279799 also had an error]
[thread 1279849 also had an error][thread 1279786 also had an error]
[thread 1279780 also had an error]
[thread 1279822 also had an error]
[thread 1279820 also had an error]
[thread 1279843 also had an error]
[thread 1279867 also had an error]
[thread 1279803 also had an error]
[thread 1279783 also had an error]
[thread 1279769 also had an error]
[thread 1279818 also had an error]
[thread 1279824 also had an error]
[thread 1279835 also had an error]
[thread 1279784 also had an error]
[thread 1279833 also had an error]
[thread 1279782 also had an error]
[thread 1279839 also had an error]
[thread 1279778 also had an error]
[thread 1279846 also had an error]
[thread 1279821 also had an error][thread 1279779 also had an error]
[thread 1279836 also had an error]
[thread 1279793 also had an error]
[thread 1279827 also had an error]
[thread 1279852 also had an error]
[thread 1279851 also had an error]
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(0/0)----------
----------rerun:(42/8549)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000fffd900dd760): JavaThread "strace004Thread96" [_thread_in_vm, id=1279864, stack(0x0000fffcd0000000,0x0000fffcd0200000)]
Stack: [0x0000fffcd0000000,0x0000fffcd0200000], sp=0x0000fffcd01fe240, free space=2040k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xe53860] InstanceKlass::jni_id_for(int)+0xc
C [libstrace004.so+0x32a0] Java_nsk_stress_strace_strace004Thread_recursiveMethod+0xa6c
J 5024 nsk.stress.strace.strace004Thread.recursiveMethod()V (0 bytes) @ 0x0000fffdeccdc7bc [0x0000fffdeccdc740+0x000000000000007c]
[error occurred during error reporting (printing native stack), id 0xe0000000, Internal Error (/opt/mach5/mesos/work_dir/slaves/35546316-ed70-4084-8244-d672e7734fd1-S13285/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fbbe2b1b-1e4e-4571-b29a-37bd1fcae805/runs/f38f8a59-bfa3-4531-a0c7-24629fcad4b8/workspace/open/src/hotspot/cpu/aarch64/frame_aarch64.inline.hpp:81)]
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
J 5024 nsk.stress.strace.strace004Thread.recursiveMethod()V (0 bytes) @ 0x0000fffdeccdc7bc [0x0000fffdeccdc740+0x000000000000007c]
J 5025 c2 nsk.stress.strace.strace004Thread.run()V (5 bytes) @ 0x0000fffdeccdcb14 [0x0000fffdeccdcac0+0x0000000000000054]
v ~StubRoutines::call_stub
siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0xf1f1f1f1f1f1f209
- backported by
-
JDK-8277557 vmTestbase/nsk/stress/strace/strace004.java fails with SIGSEGV in InstanceKlass::jni_id_for
-
- Resolved
-
-
JDK-8277559 vmTestbase/nsk/stress/strace/strace004.java fails with SIGSEGV in InstanceKlass::jni_id_for
-
- Resolved
-
-
JDK-8279516 vmTestbase/nsk/stress/strace/strace004.java fails with SIGSEGV in InstanceKlass::jni_id_for
-
- Resolved
-
-
JDK-8279517 vmTestbase/nsk/stress/strace/strace004.java fails with SIGSEGV in InstanceKlass::jni_id_for
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/be7343df
-
Commit
openjdk/jdk17u-dev/ca59b640
-
Commit
openjdk/jdk/09e8c8c6
-
Review
openjdk/jdk11u-dev/673
-
Review
openjdk/jdk17u-dev/53
-
Review
openjdk/jdk17u/317
-
Review
openjdk/jdk/6466