src/hotspot/share/oops/instanceKlass.cpp
@@ -2061,8 +2061,8 @@ Method* InstanceKlass::lookup_method_in_all_interfaces(Symbol* name,
   return NULL;
 }
 
-/* jni_id_for_impl for jfieldIds only */
-JNIid* InstanceKlass::jni_id_for_impl(int offset) {
+/* jni_id_forfor jfieldIds only */
+JNIid* InstanceKlass::jni_id_for(int offset) {
   MutexLocker ml(JfieldIdCreation_lock);
   // Retry lookup after we got the lock
   JNIid* probe = jni_ids() == NULL ? NULL : jni_ids()->find(offset);
@@ -2070,16 +2070,6 @@ JNIid* InstanceKlass::jni_id_for_impl(int offset) {
     // Slow case, allocate new static field identifier
     probe = new JNIid(this, offset, jni_ids());
     set_jni_ids(probe);
-  }
-  return probe;
-}
-
-
-/* jni_id_for for jfieldIds only */
-JNIid* InstanceKlass::jni_id_for(int offset) {
-  JNIid* probe = jni_ids() == NULL ? NULL : jni_ids()->find(offset);
-  if (probe == NULL) {
-    probe = jni_id_for_impl(offset);
   }
   return probe;
 }
